# caffeine-hal

./: .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  REVIEW.md  SKILL.md
.github/workflows/: ci.yml  docker-publish.yml  reusable-ci.yml  version-bump.yml
config/coding/: .clang-format  .clang-tidy
include/: cfn_hal.h  cfn_hal_adc.h  cfn_hal_base.h  cfn_hal_base_impl.h  cfn_hal_can.h  cfn_hal_clock.h  cfn_hal_comp.h  cfn_hal_crypto.h  cfn_hal_dac.h  cfn_hal_dma.h  cfn_hal_eth.h  cfn_hal_gpio.h  cfn_hal_i2c.h  cfn_hal_i2s.h  cfn_hal_irq.h  cfn_hal_nvm.h  cfn_hal_pwm.h  cfn_hal_qspi.h  cfn_hal_rtc.h  cfn_hal_sdio.h  cfn_hal_spi.h  cfn_hal_timer.h  cfn_hal_types.h  cfn_hal_uart.h  cfn_hal_usb.h  cfn_hal_util.h  cfn_hal_wdt.h  hal.h  hal_adc.h  hal_can.h  hal_clock.h  hal_comp.h  hal_crypto.h  hal_dac.h  hal_dma.h  hal_eth.h  hal_gpio.h  hal_i2c.h  hal_i2s.h  hal_irq.h  (+11 more)
scripts/: build-local.sh
src/mock/: cfn_hal_adc_port.c  cfn_hal_can_port.c  cfn_hal_clock_port.c  cfn_hal_comp_port.c  cfn_hal_crypto_port.c  cfn_hal_dac_port.c  cfn_hal_dma_port.c  cfn_hal_eth_port.c  cfn_hal_gpio_port.c  cfn_hal_i2c_port.c  cfn_hal_i2s_port.c  cfn_hal_irq_port.c  cfn_hal_nvm_port.c  cfn_hal_pwm_port.c  cfn_hal_qspi_port.c  cfn_hal_rtc_port.c  cfn_hal_sdio_port.c  cfn_hal_spi_port.c  cfn_hal_timer_port.c  cfn_hal_uart_port.c  cfn_hal_usb_port.c  cfn_hal_vendor_error_port.h  cfn_hal_wdt_port.c
tests/: CMakeLists.txt  cfn_hal_test_adc.cpp  cfn_hal_test_can.cpp  cfn_hal_test_clock.cpp  cfn_hal_test_comp.cpp  cfn_hal_test_crypto.cpp  cfn_hal_test_dac.cpp  cfn_hal_test_dma.cpp  cfn_hal_test_eth.cpp  cfn_hal_test_gpio.cpp  cfn_hal_test_i2c.cpp  cfn_hal_test_i2s.cpp  cfn_hal_test_irq.cpp  cfn_hal_test_lock.cpp  cfn_hal_test_nvm.cpp  cfn_hal_test_pwm.cpp  cfn_hal_test_qspi.cpp  cfn_hal_test_rtc.cpp  cfn_hal_test_sdio.cpp  cfn_hal_test_spi.cpp  cfn_hal_test_timer.cpp  cfn_hal_test_uart.cpp  cfn_hal_test_usb.cpp  cfn_hal_test_wdt.cpp  compliance.c  test_hal_adc.cpp  test_hal_can.cpp  test_hal_clock.cpp  test_hal_comp.cpp  test_hal_crypto.cpp  test_hal_dac.cpp  test_hal_dma.cpp  test_hal_eth.cpp  test_hal_gpio.cpp  test_hal_i2c.cpp  test_hal_i2s.cpp  test_hal_irq.cpp  test_hal_nvm.cpp  test_hal_pwm.cpp  test_hal_qspi.cpp  (+7 more)
